--- a/pages/17782.html
+++ b/pages/17782.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -324,7 +322,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/Poincar%C3%A9+Lie+algebra'>Poincaré Lie algebra</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/super+Poincare+Lie+algebra'>super Poincaré Lie algebra</a>, <a class='existingWikiWord' href='/nlab/show/11d+supergravity+Lie+3-algebra'>supergravity Lie 3-algebra</a>, <a class='existingWikiWord' href='/nlab/show/supergravity+Lie+6-algebra'>supergravity Lie 6-algebra</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/super+Poincar%C3%A9+Lie+algebra'>super Poincaré Lie algebra</a>, <a class='existingWikiWord' href='/nlab/show/11d+supergravity+Lie+3-algebra'>supergravity Lie 3-algebra</a>, <a class='existingWikiWord' href='/nlab/show/supergravity+Lie+6-algebra'>supergravity Lie 6-algebra</a></li>
 </ul>
 </li>
 
@@ -501,12 +499,18 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>A <em>pp-wave spacetime</em> is a <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a>, i.e. an exact solution to <a class='existingWikiWord' href='/nlab/show/Einstein+equation'>Einstein&#39;s equations</a> for <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a>, containing nothing but <span class='newWikiWord'>radiation<a href='/nlab/new/radiation'>?</a></span> (<a class='existingWikiWord' href='/nlab/show/gravitational+wave'>gravitational waves</a> and/or <a class='existingWikiWord' href='/nlab/show/light'>electromagnetic waves</a>) with one fixed wave vector.</p>
+<p>A <em>pp-wave spacetime</em> is a <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a>, i.e. an exact solution to <a class='existingWikiWord' href='/nlab/show/Einstein+equation'>Einstein&#39;s equations</a> for <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a>, containing nothing but <a class='existingWikiWord' href='/nlab/show/radiation'>radiation</a> (<a class='existingWikiWord' href='/nlab/show/gravitational+wave'>gravitational waves</a> and/or <a class='existingWikiWord' href='/nlab/show/light'>electromagnetic waves</a>) with one fixed wave vector.</p>
 
 <p>The <a class='existingWikiWord' href='/nlab/show/Ricci+curvature'>Ricci flat</a> pp-wave spacetimes are examples of <a class='existingWikiWord' href='/nlab/show/universal+spacetime'>universal spacetimes</a>.</p>
+
+<h2 id='examples'>Examples</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/M-wave'>M-wave</a></li>
+</ul>
 
 <h2 id='references'>References</h2>
 
@@ -516,19 +520,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on November 11, 2016 13:20:47 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (78.45.5.227)
+  <p>
+  Last revised on May  2, 2018 at 09:03:12.
+  See the <a href="https://ncatlab.org/nlab/history/pp-wave spacetime" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/pp-wave+spacetime" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/pp-wave+spacetime" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/pp-wave+spacetime/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/pp-wave+spacetime" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/pp-wave+spacetime" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/pp-wave spacetime/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/pp-wave+spacetime" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/pp-wave+spacetime" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/pp-wave+spacetime" id="view_source" rel="nofollow">Source</a>
