--- a/pages/17078.html
+++ b/pages/17078.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://ncatlab.org/nlab/author/Kyle%20Ferendo" title="Overview of nLab pages which Kyle Ferendo has edited" style="color: black">Pages contributed to</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,25 +307,28 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>I’m an undergraduate math major at Amherst College writing an honors thesis on some of the properties of the homotopy theory of <math class='maruku-mathml' display='inline' id='mathml_999ecc5bd4e8efd0a780c490be79fb82d9f590cb_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mi>n</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,n)</annotation></semantics></math>-categories (including <math class='maruku-mathml' display='inline' id='mathml_999ecc5bd4e8efd0a780c490be79fb82d9f590cb_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>=</mo><mn>∞</mn></mrow><annotation encoding='application/x-tex'>n=\infty</annotation></semantics></math>). I’ve only decided to fill out this page so that when I make tweaks to <math class='maruku-mathml' display='inline' id='mathml_999ecc5bd4e8efd0a780c490be79fb82d9f590cb_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab articles, people know who is to blame!</p>
+    <p>I’m a graduate student in mathematics at Brown University studying with Tom Goodwillie. <a href='https://www.math.brown.edu/~kferendo/'>Here</a> is my webpage. My research interest is higher category theory.</p>
 
-<p>If you’d like to contact me for any reason, I can be reached at kferendo15 at amherst dot edu.</p>
+<p>My undergraduate institution was Amherst College, where I studied with Michael ching. I’ve decided to fill out this page so that when I make tweaks to <math class='maruku-mathml' display='inline' id='mathml_d73406d5a394acff6a245134a8bd2260fed8a630_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab articles, people know who is to blame.</p>
+
+<p>If you’d like to contact me for any reason, I can be reached at kferendo (at) math (dot) brown (dot) edu.</p>
 </div>
 
 <div class="revisedby">
-  Created on January 12, 2016 15:56:30 
-  by <a class="existingWikiWord" href="/nlab/show/Kyle+Ferendo">Kyle Ferendo</a>
-  (74.104.144.113)
+  <p>
+  Last revised on May  2, 2018 at 18:33:08.
+  See the <a href="https://ncatlab.org/nlab/history/Kyle Ferendo" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Kyle+Ferendo" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/Kyle+Ferendo" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Kyle+Ferendo/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Kyle+Ferendo" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Kyle+Ferendo" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Kyle Ferendo/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Kyle+Ferendo" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Kyle+Ferendo" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Kyle+Ferendo" id="view_source" rel="nofollow">Source</a>
