--- a/pages/18507.html
+++ b/pages/18507.html
@@ -291,6 +291,7 @@ margin-left: 0em;
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
     <a href="https://nforum.ncatlab.org/discussion/8483/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
@@ -596,7 +597,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>Generalising a <a class='existingWikiWord' href='/nlab/show/Klein+geometry'>Klein geometry</a>, a <strong>locally Klein geometry</strong> is a <a class='existingWikiWord' href='/nlab/show/triple'>triple</a> <math class='maruku-mathml' display='inline' id='mathml_00f142c6a8bc5a7b82852be56e6161c40bc34336_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>Γ</mi><mo>,</mo><mi>G</mi><mo>,</mo><mi>H</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\Gamma, G,H)</annotation></semantics></math> where <math class='maruku-mathml' display='inline' id='mathml_00f142c6a8bc5a7b82852be56e6161c40bc34336_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>G</mi><mo>,</mo><mi>H</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(G, H)</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/homogeneous+space'>homogeneous space</a> (<math class='maruku-mathml' display='inline' id='mathml_00f142c6a8bc5a7b82852be56e6161c40bc34336_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi><mo stretchy='false'>/</mo><mi>H</mi></mrow><annotation encoding='application/x-tex'>G/H</annotation></semantics></math> not necessarily <a class='existingWikiWord' href='/nlab/show/connected+space'>connected</a>), and <math class='maruku-mathml' display='inline' id='mathml_00f142c6a8bc5a7b82852be56e6161c40bc34336_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Γ</mi><mo>⊂</mo><mi>G</mi></mrow><annotation encoding='application/x-tex'>\Gamma \subset G</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/discrete+group'>discrete</a> <a class='existingWikiWord' href='/nlab/show/subgroup'>subgroup</a> <a class='existingWikiWord' href='/nlab/show/action'>acting</a> by left multiplication on the <a class='existingWikiWord' href='/nlab/show/coset'>coset space</a> <math class='maruku-mathml' display='inline' id='mathml_00f142c6a8bc5a7b82852be56e6161c40bc34336_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi><mo stretchy='false'>/</mo><mi>H</mi></mrow><annotation encoding='application/x-tex'>G/H</annotation></semantics></math> as a group of <a class='existingWikiWord' href='/nlab/show/covering+space'>covering transformations</a> with the <a class='existingWikiWord' href='/nlab/show/double+coset'>double coset space</a>, <math class='maruku-mathml' display='inline' id='mathml_00f142c6a8bc5a7b82852be56e6161c40bc34336_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Γ</mi><mo>\</mo><mi>G</mi><mo stretchy='false'>/</mo><mi>H</mi></mrow><annotation encoding='application/x-tex'>\Gamma \backslash G/H</annotation></semantics></math>, <a class='existingWikiWord' href='/nlab/show/connected+object'>connected</a> (Def. 3.10 of <a href='#Sharpe97'>Sharpe 97</a>).</p>
+<p>Generalising a <a class='existingWikiWord' href='/nlab/show/Klein+geometry'>Klein geometry</a>, a <strong>locally Klein geometry</strong> is a <a class='existingWikiWord' href='/nlab/show/triple'>triple</a> <math class='maruku-mathml' display='inline' id='mathml_1f3575a05813f4447047907eedd9b45307449db3_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>Γ</mi><mo>,</mo><mi>G</mi><mo>,</mo><mi>H</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\Gamma, G,H)</annotation></semantics></math> where <math class='maruku-mathml' display='inline' id='mathml_1f3575a05813f4447047907eedd9b45307449db3_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi><mo stretchy='false'>/</mo><mi>H</mi></mrow><annotation encoding='application/x-tex'>G/H</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/Klein+geometry'>Klein geometry</a> (not necessarily <a class='existingWikiWord' href='/nlab/show/connected+space'>connected</a>) and <math class='maruku-mathml' display='inline' id='mathml_1f3575a05813f4447047907eedd9b45307449db3_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Γ</mi><mo>⊂</mo><mi>G</mi></mrow><annotation encoding='application/x-tex'>\Gamma \subset G</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/discrete+group'>discrete</a> <a class='existingWikiWord' href='/nlab/show/subgroup'>subgroup</a> <a class='existingWikiWord' href='/nlab/show/action'>acting</a> by left multiplication on the <a class='existingWikiWord' href='/nlab/show/coset'>coset space</a> <math class='maruku-mathml' display='inline' id='mathml_1f3575a05813f4447047907eedd9b45307449db3_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi><mo stretchy='false'>/</mo><mi>H</mi></mrow><annotation encoding='application/x-tex'>G/H</annotation></semantics></math> as a group of <a class='existingWikiWord' href='/nlab/show/covering+space'>covering transformations</a> with the <a class='existingWikiWord' href='/nlab/show/double+coset'>double coset space</a>, <math class='maruku-mathml' display='inline' id='mathml_1f3575a05813f4447047907eedd9b45307449db3_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Γ</mi><mo>\</mo><mi>G</mi><mo stretchy='false'>/</mo><mi>H</mi></mrow><annotation encoding='application/x-tex'>\Gamma \backslash G/H</annotation></semantics></math>, <a class='existingWikiWord' href='/nlab/show/connected+object'>connected</a> (<a href='#Sharpe97'>Sharpe 97, Def. 3.10</a>, <a href='#Sharpe02'>Sharpe 02, Def. 2.7</a>).</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -607,7 +608,13 @@ margin-left: 0em;
 <h2 id='references'>References</h2>
 
 <ul>
-<li id='Sharpe97'><a class='existingWikiWord' href='/nlab/show/Richard+Sharpe'>Richard Sharpe</a>, <em>Differential geometry: Cartan’s generalization of Klein’s Erlangen program</em>, Graduate Texts in Mathematics, vol. 166, Springer-Verlag, 1997.</li>
+<li id='Sharpe97'>
+<p><a class='existingWikiWord' href='/nlab/show/Richard+Sharpe'>Richard Sharpe</a>, <em>Differential geometry: Cartan’s generalization of Klein’s Erlangen program</em>, Graduate Texts in Mathematics, vol. 166, Springer-Verlag, 1997.</p>
+</li>
+
+<li id='Sharpe02'>
+<p><a class='existingWikiWord' href='/nlab/show/Richard+Sharpe'>Richard Sharpe</a>, <em>An introduction to Cartan Geometries</em>, in: <a class='existingWikiWord' href='/nlab/show/Jan+Slov%C3%A1k'>Jan Slovák</a>, Martin Čadek (eds.): Proceedings of the 21st Winter School “Geometry and Physics”. Circolo Matematico di Palermo, Palermo, 2002. Rendiconti del Circolo Matematico di Palermo, Serie II, Supplemento No. 69. pp. [61]–75</p>
+</li>
 </ul>
 
 <p>
@@ -616,14 +623,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on April 24, 2018 at 09:21:49.
+  Last revised on May  7, 2018 at 05:59:32.
   See the <a href="https://ncatlab.org/nlab/history/locally Klein geometry" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/locally+Klein+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/locally+Klein+geometry/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/locally+Klein+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/locally+Klein+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/locally+Klein+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/locally+Klein+geometry/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/locally+Klein+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/locally+Klein+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/locally Klein geometry/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
